# llm_anime_recommendation

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebook/: create_dataset.ipynb  create_faiss_db.ipynb  create_reco_model.ipynb  create_recommend_model.ipynb  langchain.ipynb  online_learning.ipynb  qualitative_evaluation.ipynb  search_anime_for_testdata.ipynb
src/: candidate.py  demo.py  prompt_list.py  recommend.py  summarize_result.py
