[tool.poetry]
name = "llm-anime-recommendation"
version = "0.1.0"
description = ""
authors = ["baibai25 <kamuy.camel.0225@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_anime_recommendation"}]

[tool.poetry.dependencies]
python = "3.11.4"
torch = "^2.0.1"
langchain = "^0.0.206"
pandas = "^2.0.2"
numpy = "^1.25.0"
ipykernel = "^6.23.2"
transformers = "^4.30.2"
gpt4all = "^0.3.4"
kaggle = "^1.5.13"
river = "^0.17.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
